fix: update export modal (#179)
* fix: update export modal

* fix: remove extra margin class

--- a/apps/widget-creator/src/tailwind.css
+++ b/apps/widget-creator/src/tailwind.css
@@ -108,3 +108,75 @@
     background: var(--color-csw-gray-700);
   }
 }
+
+@utility text-csw-label-lg {
+	@layer components {
+		@apply font-semibold;
+		font-size: 1rem;
+		line-height: 1rem;
+		letter-spacing: -0.025rem;
+	}
+}
+
+@utility text-csw-label-md {
+	@layer components {
+		@apply font-semibold;
+		font-size: 0.875rem;
+		line-height: 1rem;
+		letter-spacing: -0.025rem;
+	}
+}
+
+@utility text-csw-label-2sm {
+	@layer components {
+		@apply font-semibold;
+		font-size: 0.825rem;
+		line-height: 0.875rem;
+		letter-spacing: -0.01875rem;
+	}
+}
+
+@utility text-csw-label-sm {
+	@layer components {
+		@apply font-semibold;
+		font-size: 0.75rem;
+		line-height: 0.875rem;
+		letter-spacing: -0.01875rem;
+	}
+}
+
+@utility text-csw-value-lg {
+	@layer components {
+		@apply font-semibold;
+		font-size: 2rem;
+		line-height: 2.25rem;
+		letter-spacing: -0.0625rem;
+	}
+}
+
+@utility text-csw-body-lg {
+	@layer components {
+		@apply font-medium;
+		font-size: 1rem;
+		line-height: 1.375rem;
+		letter-spacing: -0.025rem;
+	}
+}
+
+@utility text-csw-body-md {
+	@layer components {
+		@apply font-medium;
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+		letter-spacing: -0.025rem;
+	}
+}
+
+@utility text-csw-body-sm {
+	@layer components {
+		@apply font-medium;
+		font-size: 0.75rem;
+		line-height: 1rem;
+		letter-spacing: -0.025rem;
+	}
+}
